--- a/indexes.yml
+++ b/indexes.yml
@@ -10,7 +10,7 @@ line:
   label:
     where: name IS NOT NULL OR ref IS NOT NULL
   ferry:
-    where: route = 'ferry' AND osm_id > 0
+    where: route = 'ferry' AND osm_id < 0
   river:
     where: waterway = 'river'
   waterway:
