--- a/indexes.yml
+++ b/indexes.yml
@@ -36,6 +36,8 @@ polygon:
     where: way_area > 5980000
   way_area_z10:
     where: way_area > 23300
+  landmass:
+    where: landmass = 'yes'
 roads:
   # The roads table only has a subset of data, so it's just got some low-zoom
   # indexes and some fairly selective ones for high zoom
